# publication-ceramicspeed-dataset

./: .gitignore  Publication_Assessment.docx  Publication_Strategy.docx  config.yaml  model_evaluation_methodology.docx  pyproject.toml  ~$Slides for meeting.pptx
dev/: 01_feature_generation.py  02_feature_analysis.py  03_frequency_band_analysis.py  04_modelling.py  config.yaml  pyproject.toml
dev/.claude/: settings.json
dev/ceramicspeed.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dev/exploration/: 00_eda_timeseries.py  ae_analysis.py  ae_us_correlation.py  eda.py  eda_all_sweeps.py  eda_spectra.py  eda_wavelet.py  explore_scope_hdf5.py  infogram.py  operating_condition_mapping.py
dev/features/: ae_us_correlation_results.csv  band_analysis_ae.csv  band_analysis_ultrasound.csv  eda_band_energy_fractions.csv  feature_ranking_ae.csv  feature_ranking_us.csv  feature_selection.json  features.parquet  metadata.parquet  model_comparison.csv  model_folds_bayesianridge_ae.csv  model_folds_bayesianridge_combined.csv  model_folds_bayesianridge_ultrasound.csv  model_folds_elasticnet_ae.csv  model_folds_elasticnet_combined.csv  model_folds_elasticnet_ultrasound.csv  model_folds_lightgbm_ae.csv  model_folds_lightgbm_combined.csv  model_folds_lightgbm_ultrasound.csv  model_folds_polynomial_ae.csv  model_folds_polynomial_combined.csv  model_folds_polynomial_ultrasound.csv  model_holdout_bayesianridge_ae.csv  model_holdout_bayesianridge_combined.csv  model_holdout_bayesianridge_ultrasound.csv  model_holdout_elasticnet_ae.csv  (+20 more)
paper/: main.aux  (+8 more)
(+40 files in other folders)
